# RS-simple-utils

./: Cargo.toml
.github/: dependabot.yml
src/: utils.rs
