[package]
name = "rs_simple_utils"
version = "0.1.0"
edition = "2021"
auther = "sipu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.0"
chrono = "0.4.39"
chrono-tz = "0.10.1"
reqwest = "0.12.12"
serde_json = "1.0.138"
winapi="0.3.9"
